Chuong2/k8s-microservices-lab/catalog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deploy
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-config
        configMap:
          name: catalog-html
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: microservices
spec:
  selector:
    app: catalog
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
