Chuong2/k8s-microservices-lab/orders-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deploy
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-config
        configMap:
          name: orders-html
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: microservices
spec:
  selector:
    app: orders
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
