Chuong2/k8s-microservices-lab/users-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deploy
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-config
        configMap:
          name: users-html
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: microservices
spec:
  selector:
    app: users
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
